# otomati-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: app-testing.yml  main.yml
.streamlit/: config.toml
otomati_app/: Home.py  config.py  settings.py
otomati_app/.streamlit/: config.toml
otomati_app/auth/: google_oauth2.py
otomati_app/components/: sidebar.py
otomati_app/config/: config.py
otomati_app/pages/: 1_PDF_Q&A.py  1_RAG_Local_PDF_Q&A.py  2_RAG_Google_Drive.py
otomati_app/processer/: google.py
otomati_app/services/: conversation.py
otomati_app/utils/: conversation.py  pdf_processing.py  text_processing.py  vector_store.py
