[tool.poetry]
name = "otomati-app"
version = "0.1.0"
description = "Otomati APP help communicate with AI"
authors = ["Justin Hung <hugh.12345zxcvb@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "otomati_app" }
]

[tool.poetry.dependencies]
python = ">3.9,<3.9.7 || >3.9.7,<4.0"
python-dotenv = "^1.0.1"
pypdf = "^4.2.0"

langchain = ">0.2.0"
langchain-community = ">0.2.0"
langchain_openai = ">=0.1.8"
langchainhub = ">=0.1.20"

openai = ">=1.2"
duckduckgo-search = "*"
anthropic = ">=0.3.0"
trubrics = ">=1.4.3"
slack_sdk = ">=3.29.0"

streamlit = ">=1.28"
streamlit-feedback = "*"

faiss-cpu = "^1.8.0"
spacy = "^3.7.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1.tar.gz"}

[tool.poetry.dev-dependencies]
black = ">23.3.0"
mypy = ">1.4.1"
pre-commit = "=3.7.1"
watchdog = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
